# website-cloner

./: .gitignore  README.md
backend/: pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: clone.py
backend/app/services/: clone_service.py
frontend/src/app/: page.tsx
